--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -4,7 +4,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <h1 class="govuk-heading-xl"><%= t('.find_apprenticeship-std') %></h1>
+      <h1 class="govuk-heading-xl"><%= t('.find_apprenticeship_std') %></h1>
 
     </div>
   </div>    
@@ -14,7 +14,7 @@
 
       <div class="govuk-tabs" data-module="tabs">
         <h2 class="govuk-tabs__title ccs-no-print">
-          <%= t('.find_apprenticeship-tab-title') %>
+          <%= t('.find_apprenticeship_tab_title') %>
         </h2>
 
         <ul class="govuk-tabs__list">
