--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -389,4 +389,27 @@ table.ccs-govuk-table--style {
 
 }
 
+.ccs-panel-static {
+    display: block; 
+    width: 100%; 
+    background-color: govuk-colour("grey-4"); 
+    padding: govuk-spacing(4) govuk-spacing(4) govuk-spacing(2) govuk-spacing(4); 
+    margin-bottom: govuk-spacing(2); 
+}
+@media (min-width: 40.0625em){//desktop
+    .govuk-grid-column-one-third {
+        .ccs-panel-static { 
+            position: fixed; 
+            width: 188px; 
+
+                span {
+                    @include govuk-font($size: 36);; 
+                    display: inline-block; 
+                    width: 100%; 
+                    font-weight: bold; 
+                }
+        }
+    }
+}
+
 
