--- a/app/views/supply_teachers/suppliers/_branch.html.erb
+++ b/app/views/supply_teachers/suppliers/_branch.html.erb
@@ -5,46 +5,7 @@
       <% if branch.name.present? %>
         <h3 class="govuk-heading-s supplier-record__branch"><%= t('supply_teachers.suppliers.all_suppliers.branch') %>: <span class="supplier-record__branch-name"><%= branch.name %></span></h3>
       <% end %>
-      <p>
-        <strong>Region:</strong> <%= branch.region %><br />
-        <%= branch.address_1 %>, <%= branch.address_2 %>, <%= branch.town %>, <%= branch.county %>, <%= branch.postcode %><br />
-      </p>
     </div>
   </div>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body">
-        <strong><%= branch.contact_name %></strong><br />
-        <%= format_telephone_number(branch.telephone_number) %><br />
-        <%= mail_to(branch.contact_email, branch.contact_email, 'aria-label': "Email #{branch.contact_name} from #{branch.supplier.name}") %>
-      </p>
-    </div>
-  </div>
-
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col"><strong><%= t('supply_teachers.suppliers.all_suppliers.column1') %></strong></th>
-      <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('supply_teachers.suppliers.all_suppliers.column2') %><br><%= SupplyTeachers::RateTerm['one_week'] %></strong></th>
-      <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('supply_teachers.suppliers.all_suppliers.column2') %><br><%= SupplyTeachers::RateTerm['twelve_weeks'] %></strong></th>
-      <th class="govuk-table__header govuk-table__header--numeric master-vendor-record__markup-column" scope="col"><strong><%= t('supply_teachers.suppliers.all_suppliers.column2') %><br><%= SupplyTeachers::RateTerm['more_than_twelve_weeks'] %></strong></th>
-    </tr>
-    </thead>
-    <tbody class="govuk-table__body">
-    <% branch.supplier.rates_grouped_by_job_type.each do |job_type, rates| %>
-      <tr class="govuk-table__row">
-        <th class="govuk-table__header" scope="row"><%= SupplyTeachers::JobType[job_type] %></th>
-        <% if rates.length == 1 %>
-          <% 3.times do %>
-            <td class="govuk-table__cell govuk-table__cell--numeric master-vendor-record__markup-column"><%= number_to_percentage(rates.first.mark_up * 100, precision: 1) %></td>
-          <% end %>
-        <% elsif rates.length == 3 %>
-          <% rates.each do |rate| %>
-            <td class="govuk-table__cell govuk-table__cell--numeric"><%= number_to_percentage(rate.mark_up * 100, precision: 1) %></td>
-          <% end %>
-        <% end %>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
+  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 </div>
