--- a/app/views/supply_teachers/suppliers/all_suppliers.html.erb
+++ b/app/views/supply_teachers/suppliers/all_suppliers.html.erb
@@ -2,10 +2,11 @@
 <%= content_for :page_section, t('supply_teachers.page_section') %>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
 
-    <p class="govuk-body"><%= number_to_human(@branches_count, units: :suppliers) %></p>
+    <p class="govuk-body govuk-!-margin-bottom-8"><%= t('.results_found_with_location_html', results:@branches_count) %></p>
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
     <%= render partial: 'branch', collection: @branches %>
     <%= paginate @branches, views_prefix: 'shared', window: 2, outer_window: 1 %>
   </div>
