--- a/app/views/shared/kaminari/_prev_page.html.erb
+++ b/app/views/shared/kaminari/_prev_page.html.erb
@@ -7,5 +7,8 @@
     remote:        data-remote
 -%>
 <li class="prev">
+  <span class="icon">
+    <svg width="17" height="14" xmlns="http://www.w3.org/2000/svg"><path d="M6.7 0l1.4 1.4-4.3 4.3h13v2H3.9l4.2 4-1.4 1.4L0 6.7z" fill="#007194" fill-rule="evenodd"></path></svg>
+  </span>
   <%= link_to_unless current_page.first?, t('views.pagination.previous').html_safe, url, rel: 'prev', remote: remote %>
 </li>
