--- a/app/views/supply_teachers/suppliers/_branch.html.erb
+++ b/app/views/supply_teachers/suppliers/_branch.html.erb
@@ -1,6 +1,6 @@
-<div class="govuk-grid-row supplier-record__header-group">
+<div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h2 class="govuk-heading-m govuk-!-font-size-27 supplier-record__supplier-name"><%= branch.supplier.name %></h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-0"><%= branch.supplier.name %></h2>
     <% if branch.name.present? %>
       <h3 class="govuk-heading-s supplier-record__branch"><%= t('supply_teachers.suppliers.all_suppliers.branch') %>: <span class="supplier-record__branch-name"><%= branch.name %></span></h3>
     <% end %>
