--- a/app/views/supply_teachers/suppliers/all_suppliers.html.erb
+++ b/app/views/supply_teachers/suppliers/all_suppliers.html.erb
@@ -3,7 +3,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-3 cmp-page-heading"><%= t('.header') %></h1>
 
     <p class="govuk-body govuk-!-margin-bottom-8"><%= t('.results_found_with_location_html', results:@branches_count) %></p>
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
