urls and copy updated

--- a/app/views/home/landing_page.html.erb
+++ b/app/views/home/landing_page.html.erb
@@ -1,22 +1,20 @@
-    <div class="CCS-landing-pg-content">
+    <div class="ccs-landing-pg-content">
 
       <div class="govuk-grid-row govuk-!-margin-top-2 govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-two-thirds">
 
           <h1 class="govuk-heading-xl">Crown Marketplace</h1>
 
-          <p class="govuk-!-font-size-27">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id congue ligula.</p>
-
         </div>
       </div>
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/supply-teachers" class="govuk-link--no-visited-state CSS-no-underline">Find supply teachers and agency workers</a>
+            <a href="https://marketplace.service.crowncommercial.gov.uk/supply-teachers" class="govuk-link--no-visited-state ccs-no-underline">Find supply teachers and agency workers</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Allows users across the public education secytor to select agencies and other organisations to provide supply teachers</p>
+          <p class="govuk-body govuk-!-padding-left-6">Includes agencies and other organisations that provide supply teachers in England</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
@@ -25,10 +23,10 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/management_consultancy" class="govuk-link--no-visited-state CSS-no-underline">Find management consultancy services</a>
+            <a href="https://marketplace.service.crowncommercial.gov.uk/facilities_management " class="govuk-link--no-visited-state ccs-no-underline">Find facilities management services</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Allow the public sector to buy single assignments for business consultancy services</p>
+          <p class="govuk-body govuk-!-padding-left-6">Procure services such as maintenance, cleaning, helpdesk and security</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
@@ -37,10 +35,10 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/facilities_management" class="govuk-link--no-visited-state CSS-no-underline">Find facilities management services suppliers</a>
+            <a href="https://marketplace.service.crowncommercial.gov.uk/apprenticeship_training" class="govuk-link--no-visited-state ccs-no-underline">Find apprenticeship training providers</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">A guided experience to direct the user to the most appropriate and competitive suppliers. Allows contract award up to &pound;1.5<abbr>m</abbr></p>
+          <p class="govuk-body govuk-!-padding-left-6">Get a list of providers that can train apprentices in your area</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
@@ -49,10 +47,10 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/apprenticeships" class="govuk-link--no-visited-state CSS-no-underline">Find apprenticeship training services</a>
+            <a href="https://marketplace.service.crowncommercial.gov.uk/management_consultancy" class="govuk-link--no-visited-state ccs-no-underline">Find management consultancy services</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Allow public sector apprentice managers to find an approved supplier to provide training and to allow suppliers too big to provide courses</p>
+          <p class="govuk-body govuk-!-padding-left-6">Includes consultants in finance, HR and digital technologies</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
@@ -61,10 +59,10 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/legal_services" class="govuk-link--no-visited-state CSS-no-underline">Find legal services</a>
+            <a href="https://marketplace.service.crowncommercial.gov.uk/legal_services" class="govuk-link--no-visited-state ccs-no-underline">Find legal services</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Provision of national and regional legal services and specialisms in property, construction, trainsport, rail and low cost drafting services</p>
+          <p class="govuk-body govuk-!-padding-left-6">Includes legal services in property, employment and tax law</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
@@ -73,36 +71,47 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/book_travel" class="govuk-link--no-visited-state CSS-no-underline">Book travel</a>
+            <a href="https://travel.crowncommercial.gov.uk/" class="govuk-link--no-visited-state ccs-no-underline">Book travel</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">A service to allow users to book travel from multiple travel providers. Provide customers with travel data</p>
+          <p class="govuk-body govuk-!-padding-left-6">Find and book accommodation, air and rail travel from approved providers</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
       </div>
+
+      <!--div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m">
+            <a href="#" class="govuk-link--no-visited-state ccs-no-underline">Gov Switch</a>
+          </h2>
+
+          <p class="govuk-body govuk-!-padding-left-6">Government departments can switch gas, electricity and water supplier</p>
+
+
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div-->
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/gov_switch" class="govuk-link--no-visited-state CSS-no-underline">Gov Switch</a>
+            <a href="https://schoolswitch.crowncommercial.gov.uk" class="govuk-link--no-visited-state ccs-no-underline">School Switch</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Allow users to switch electricity and gas suppliers. Water and fuels to be added later</p>
-
+          <p class="govuk-body govuk-!-padding-left-6">Schools and academies can switch utility suppliers, such as gas and electricity</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
-      </div>
+      </div>      
 
-      <div class="govuk-grid-row  govuk-!-margin-bottom-9">
+      <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">
-            <a href="/school_switch" class="govuk-link--no-visited-state CSS-no-underline">School Switch</a>
+            <a href="https://fleetportal.crowncommercial.gov.uk/" class="govuk-link--no-visited-state ccs-no-underline">Fleet Portal</a>
           </h2>
 
-          <p class="govuk-body govuk-!-padding-left-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor maximus aliquam. Sed fringilla nibh orci, eu consectetur leo cursus at</p>
-
+          <p class="govuk-body govuk-!-padding-left-6">Find suppliers to lease or buy vehicles from</p>
 
           <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
         </div>
