--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -77,10 +77,11 @@ $govuk-link-visited-colour: #4c2c92;
 
 
 /* global across framework styles: start */
-
-.CSS-no-underline {
+.ccs-landing-pg-content {
+    padding-bottom: 60px; 
+}
+.ccs-no-underline {
   text-decoration: none; 
 }
-
 
 /* global across framework styles: end */
