--- a/app/views/shared/kaminari/_paginator.html.erb
+++ b/app/views/shared/kaminari/_paginator.html.erb
@@ -7,7 +7,7 @@
     paginator:     the paginator that renders the pagination tags inside
 -%>
 <%= paginator.render do -%>
-  <ul class="CSS-pagination-txt" role="navigation" aria-label="pager">
+  <ul class="CSS-pagination-txt govuk-body" role="navigation" aria-label="pager">
     <%= first_page_tag unless current_page.first? %>
     <%= prev_page_tag unless current_page.first? %>
     <% each_page do |page| -%>
