--- a/app/views/shared/kaminari/_page.html.erb
+++ b/app/views/shared/kaminari/_page.html.erb
@@ -8,5 +8,5 @@
     remote:        data-remote
 -%>
 <li class="page<%= ' current' if page.current? %>">
-  <%= link_to_unless page.current?, page, url, {remote: remote, rel: page.rel} %>
+  <span><%= link_to_unless page.current?, page, url, {remote: remote, rel: page.rel} %></span>
 </li>
