Intro text added

--- a/app/views/home/landing_page.html.erb
+++ b/app/views/home/landing_page.html.erb
@@ -5,6 +5,8 @@
 
           <h1 class="govuk-heading-xl">Crown Marketplace</h1>
 
+          <p class="govuk-body govuk-!-font-size-27">Public sector organisations can find approved suppliers of goods, services and people in a compliant and efficient way</p>
+
         </div>
       </div>
 
