--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -275,7 +275,6 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
 } 
 
 /* AT overrides start */
-
 .govuk-input, 
 .govuk-textarea, 
 .govuk-radios__input, 
@@ -284,15 +283,16 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
 .js-enabled .govuk-tabs__tab[aria-selected="true"] {
     border-width: 1.5px !important; 
 }
+.govuk-radios__input + .govuk-radios__label::before {
+    border-width: 1.6px; 
+}
 .js-enabled .govuk-tabs__tab[aria-selected="true"]{
     margin-bottom: -2px !important;
 }
-
 /* AT overrides end */
 
 
 /* ccs-no-print */
-
 @media print {
     #results-filters {
         .results-panel {
@@ -304,7 +304,7 @@ body.js-enabled .ccs-at-results-filters .ccs-at-checkbox-accordian {
 
 
 
-
+/* ccs global patterns start: currently here. */
 table.ccs-govuk-table--style {
     .govuk-table__header, 
     .govuk-table__cell {
@@ -389,27 +389,39 @@ table.ccs-govuk-table--style {
 
 }
 
-.ccs-panel-static {
+.ccs-right-panel-sticky {
     display: block; 
     width: 100%; 
-    background-color: govuk-colour("grey-4"); 
-    padding: govuk-spacing(4) govuk-spacing(4) govuk-spacing(2) govuk-spacing(4); 
-    margin-bottom: govuk-spacing(2); 
+    margin-bottom: govuk-spacing(3);
+
+    & > div {
+        padding: govuk-spacing(4) govuk-spacing(4) govuk-spacing(2) govuk-spacing(3); 
+        margin: 0; 
+    }
 }
 @media (min-width: 40.0625em){//desktop
-    .govuk-grid-column-one-third {
-        .ccs-panel-static { 
-            position: fixed; 
-            width: 188px; 
+    .ccs-right-panel-sticky {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 30px; 
+        float: right;     
+        width: 33.33333%; 
 
-                span {
-                    @include govuk-font($size: 36);; 
-                    display: inline-block; 
-                    width: 100%; 
-                    font-weight: bold; 
-                }
+        & > div {
+            background-color: govuk-colour("grey-4"); 
+            margin-left: govuk-spacing(2); 
+        }
+
+        span {
+            @include govuk-font($size: 36); 
+            display: inline-block; 
+            width: 100%; 
+            font-weight: bold; 
         }
     }
 }
 
-
+.ccs--fieldset__heading--wide {
+    max-width: none; 
+    width: 100%;  
+}
