--- a/app/views/apprenticeships/home/requirements.html.erb
+++ b/app/views/apprenticeships/home/requirements.html.erb
@@ -2,7 +2,6 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
 
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
@@ -15,12 +14,19 @@
   <form action="requirement" method="">
 
     <div class="govuk-grid-row">
+
+      <div class="ccs-right-panel-sticky">
+        <div>
+          <p class="govuk-body-m govuk-!-font-weight-bold"><span>12</span> Providers can match these requirements</p>
+        </div>
+      </div>
+
       <div class="govuk-grid-column-two-thirds">
         
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading">
+              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
                 The maximum funding for this Apprenticeship Standard is &pound;27,000. Would you use a supplier that requires additional funding to provide the training? 
               </h1>
             </legend>
@@ -45,7 +51,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading">
+              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
                 Do you need help with recruiting the apprentices?
               </h1>
             </legend>
@@ -70,7 +76,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="hint-radio-c">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading">
+              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
                 Do you need to customise this training to your organisation's needs? 
               </h1>
             </legend>
@@ -98,11 +104,11 @@
 
         <fieldset class="govuk-fieldset" aria-describedby="hint-input-01">
           <div class="govuk-form-group">
-            <label class="govuk-label" for="input-01">
-              What is the minimum number of apprentices that you need training?
+            <label class="govuk-label govuk-label--s" for="input-01">
+              What is the minimum number of apprentices that you need training? 
             </label>
 
-            <span id="hint-input-01" class="govuk-hint">
+            <span id="hint-input-01" class="govuk-hint govuk-!-font-size-16">
               If you're unsure of exact numbers, use a good estimate
             </span>
 
@@ -112,11 +118,6 @@
 
       </div>
 
-      <div class="govuk-grid-column-one-third">
-        <div id="ccs-panel-static" class="ccs-panel-static">
-          <p class="govuk-body-m govuk-!-font-weight-bold"><span>12</span> Providers can match these requirements</p>
-        </div>
-      </div>
     </div>
 
     <div class="govuk-grid-row">
