--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -41,6 +41,13 @@
               </h1>  
               <%= text_field_tag :search, params[:search], class: 'govuk-input ccs-search-icon' %>
             </div>
+
+
+                  <!--label class="govuk-label govuk-label--s" for="search">
+        Keyword search
+      </label>
+      <input type="search" name="keywords" id="keywords" class="govuk-input ccs-govuk-input--search" maxlength="200" /> 
+      <input class="submit" type="submit" value="Search"-->
             
             <%= render 'layouts/button', text: t('common.search')%>
 
