--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -7,7 +7,7 @@
 
       <div class="ccs-logo__dfe">
         <p class="govuk-body-s"><%= t('.supported_by') %></p>
-        <%= image_tag('dfe_logo.png', alt: 'Department for Education') %>
+        <%= image_tag('Department_for_Education.svg', alt: 'Department for Education', width: '125px;') %>
       </div>
 
       <p class="govuk-body"><%= t('.use_this_service_to.title') %></p>
