page title tags added

--- a/app/views/apprenticeships/home/find_apprentices5.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices5.html.erb
@@ -1,15 +1,13 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
       <span class="govuk-caption-xl"><%= t('.title_caption') %></span>
       <h1 class="govuk-heading-xl">Building services design engineer</h1>
 
-      <%= link_to t('.button_label'), 'requirements', role: 'button', class: 'govuk-button' %>
+      <%= link_to t('.button_label'), '/apprenticeships/requirements', role: 'button', class: 'govuk-button' %>
 
     </div>
   </div>      
