--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
   <div class="govuk-grid-row">
