--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -132,9 +132,10 @@
       <% end %>
     </ul>
 
-    <%= link_to '#', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
+    <%= link_to '/apprenticeships/find_apprentices5', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
       <%= t('.next')%><span>&nbsp;&rarr;</span>
     <% end %>
+
   </section>
 
   <% end %>
