--- a/app/views/layouts/_header-banner.html.erb
+++ b/app/views/layouts/_header-banner.html.erb
@@ -14,7 +14,7 @@
             <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
               <% if logged_in? %>
                 <li class="govuk-header__navigation-item">
-                  <%= link_to 'Back to start', supply_teachers_path, class: 'govuk-header__link' %>
+                  <%= link_to 'Back to start', service_start_page_path, class: 'govuk-header__link' %>
                 </li>
                 <li class="govuk-header__navigation-item">
                     <%= button_to "Sign out", sign_out_path, class: 'ccs-header__signout' %>
@@ -23,5 +23,5 @@
             </ul>
           </nav>
         </div>
-        
+
       </div>
