--- a/app/views/apprenticeships/home/requirement.html.erb
+++ b/app/views/apprenticeships/home/requirement.html.erb
@@ -6,18 +6,18 @@
     <div class="govuk-grid-column-full">
 
       <span class="govuk-caption-xl">Building services design engineer</span>
-      <h1 class="govuk-heading-xl"><%= t('.requirements_h1_title') %></h1>
+      <h1 class="govuk-heading-xl"><%= t('.requirement_h1_title') %></h1>
 
     </div>
   </div> 
 
-  <form action="requirement" method="">
-
+  <form action="supplier_search" method="">
+    
     <div class="govuk-grid-row">
 
       <div class="ccs-right-panel-sticky">
         <div>
-          <p class="govuk-body-m govuk-!-font-weight-bold"><span>12</span> Providers can match these requirements</p>
+          <p class="govuk-body-m govuk-!-font-weight-bold"><span>8</span> <%= t('.providers_text') %></p>
         </div>
       </div>
 
@@ -26,8 +26,8 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
-                The maximum funding for this Apprenticeship Standard is &pound;27,000. Would you use a supplier that requires additional funding to provide the training? 
+              <h1 class="govuk-fieldset__heading ccs-fieldset__heading--wide">
+              <%= t('.question_01_pt01') %> &pound;27,000. <%= t('.question_01_pt02') %>
               </h1>
             </legend>
 
@@ -51,8 +51,8 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
-                Do you need help with recruiting the apprentices?
+              <h1 class="govuk-fieldset__heading ccs-fieldset__heading--wide">
+                <%= t('.question_02') %>
               </h1>
             </legend>
 
@@ -76,13 +76,13 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="hint-radio-c">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              <h1 class="govuk-fieldset__heading ccs--fieldset__heading--wide">
-                Do you need to customise this training to your organisation's needs? 
+              <h1 class="govuk-fieldset__heading ccs-fieldset__heading--wide">
+                <%= t('.question_03') %>
               </h1>
             </legend>
 
             <span id="hint-radio-c" class="govuk-hint govuk-!-font-size-16">
-              For example, does the course require a custom structure of security specification
+              <%= t('.question_03_hint') %>
             </span>
 
             <div class="govuk-radios govuk-radios--inline">
@@ -101,20 +101,54 @@
             </div>
           </fieldset>
         </div>  
+        
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="input-01">
+            <%= t('.question_04') %>
+          </label>
 
-        <fieldset class="govuk-fieldset" aria-describedby="hint-input-01">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-label--s" for="input-01">
-              What is the minimum number of apprentices that you need training? 
-            </label>
+          <span id="hint-input-01" class="govuk-hint govuk-!-font-size-16">
+            <%= t('.question_04_hint') %>
+          </span>
 
-            <span id="hint-input-01" class="govuk-hint govuk-!-font-size-16">
-              If you're unsure of exact numbers, use a good estimate
-            </span>
+          <input class="govuk-input govuk-input--width-4" id="input-01" name="input-01" type="text" aria-describedby="hint-input-01">
+        </div>
 
-            <input class="govuk-input govuk-input--width-4" id="input-01" name="input-01" type="text" aria-describedby="hint-input-01">
-          </div>
-        </fieldset>                   
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+                    
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              <h1 class="govuk-fieldset__heading ccs-fieldset__heading--wide">
+                <%= t('.question_05') %>
+              </h1>
+            </legend>
+
+            <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="radio-id-07" name="radio-d" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="radio-id-07">
+                  Yes
+                </label>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="radio-id-08" name="radio-d" type="radio" value="no" data-aria-controls="postcode-box">
+                <label class="govuk-label govuk-radios__label" for="radio-id-08">
+                  No
+                </label>
+              </div>  
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="postcode-box">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="input-postcode">
+                    <%= t('.postcode_label') %>
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="input-postcode" name="input-postcode" type="input">
+                </div>
+              </div>
+            </div>
+
+          </fieldset>
+        </div>
 
       </div>
 
@@ -123,127 +157,9 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full govuk-!-margin-top-6 govuk-!-margin-bottom-6">
 
-        <%= render 'layouts/button', text: t('.requirements_btn_text') %>
+        <%= render 'layouts/button', text: t('.requirement_btn_text') %>
 
       </div>
     </div>
 
   </form>
-
-
-
-
-
-
-<hr>
-xxxxxxxxxxxx
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-      <h2 class="govuk-heading-l"><%= t('Add your requirements:') %></h2>
- <div class="govuk-radios">
-<div class="govuk-radios govuk-radios--inline">
-
-      <p class="govuk-heading-s"><%= 'The maximum funding for this Apprenticehip standard is #27000. Would you use a supplier that requires additional funding to provide the training ? ' %></p>
-  <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name-1">
-          Yes
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
-        </label>
-      </div>
-    </div>
-
-<br/>
-<br/>
-
-      <p class="govuk-heading-s"><%= t('Do you need help with recruiting the apprentices ?:') %></p>
-
- <div class="govuk-radios">
-<div class="govuk-radios govuk-radios--inline">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name-1">
-          Yes
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
-        </label>
-      </div>
-    </div>
-</div>
-<br/>
-<br/>
-      <p class="govuk-heading-s"><%= t('Do you need to customise this training to your organisation needs ?:') %></p>
-  <label class="govuk-hint" for="width-6">
-      For example, does the course require a custom structure or security specification      
-  </label>
- <div class="govuk-radios">
-<div class="govuk-radios govuk-radios--inline">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name-1">
-          Yes
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
-        </label>
-      </div>
-    </div>
-</div>
-
-
-<br/>
-<br/>
-
-<div class="govuk-form-group">
-  <label class="govuk-label" for="width-6">
-       What is the minimum number of apprentices you need training ?
-  </label>
-  <label class="govuk-hint" for="width-6">
-      If your unsure of the exact number, use a good estimate      
-  </label>
-  <input class="govuk-input govuk-input--width-4" id="width-4" name="width-4" type="text">
-</div>
-
-<br/>
-<br/>
-      <p class="govuk-heading-s"><%= t('Does the training need to take place in multiple locations ?:') %></p>
-
- <div class="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name-1">
-          Yes
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
-        </label>
-      </div>
-</div>
-<div class="govuk-form-group">
-  <label class="govuk-label" for="width-6">
-      Enter the postcode where training needs to happen ?
-  </label>
-  <input class="govuk-input govuk-input--width-4" id="width-4" name="width-4" type="text">
-</div>
-<br/>
-<br/>
-      <%= link_to t('Find training providers'), 'supplier_search', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
-
-    </div>
-  </div>
