--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -19,6 +19,7 @@
         <li><%= t('.use_this_service_to.view_the_rates') %></li>
         <li><%= t('.use_this_service_to.create_a_shortlist') %></li>
         <li><%= t('.use_this_service_to.calculate_the_maximum') %></li>
+        <li><%= t('.use_this_service_to.view_all_suppliers') %></li>
       </ul>
 
       <p class="govuk-body">
